--- a/src/app/pet/pet.component.html
+++ b/src/app/pet/pet.component.html
@@ -1,16 +1,8 @@
 <div class="pet">
-  <div class="header">
-    Домашнее животное
-  </div>
-  <div class="petId">
-    Под номером
-    {{pet.id}}
-  </div>
+
+  <img class="petPhoto" src= {{pet.photoUrls}}/>
   <div class="petName">
     {{pet.name}}
-  </div>
-  <div class="petPhoto">
-    {{pet.photoUrls}}
   </div>
   <div class="petStatus">
     {{pet.status}}
