--- a/src/app/pet/pet.component.scss
+++ b/src/app/pet/pet.component.scss
@@ -15,23 +15,12 @@
   column-gap: 10px;
   background-color: cadetblue;
   border-radius: 20px;
-  width: 20%;
+  width: 200px;
   margin: 10px;
   padding: 10px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.petId {
-  display: flex;
-  flex-direction: row;
-  row-gap: 10px;
-  background-color: ghostwhite;
-  border-radius: 10px;
-  padding: 5px;
-  margin-top: 10px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-}
 
 .petName {
   display: flex;
